# EPG_api

./: .dockerignore  .env.example  README.md  docker-compose.yml  pyproject.toml
app/: logger.py  main.py  settings.py
app/api/: root.py
app/schemas/: __init__.py  root.py
app/service/: __init__.py  calculator.py  evaluator.py
deployment/app/: Dockerfile
