[tool.poetry]
name = "epg-api"
version = "0.1.0"
description = ""
authors = ["CherryNick <17rolex@gmail.com>"]
readme = "README.md"
packages = [{include = "epg_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
